<resources>
    <string name="app_name">Onyx</string>

    <!-- ERRORS -->
    <string name="err_user_already_add">El usuario ya está añadido al grupo</string>
    <string name="err_passwd_no_coinciden">Las contraseñas no coinciden</string>
    <string name="err_email_sin_formate">Formato de email incorrecto</string>

    <string name="err_cargar_grupos">Error al cargar grupos</string>
    <string name="err_cargar_grupo">Error al cargar grupo</string>
    <string name="err_crear_grupo">Error al crear grupo</string>
    <string name="err_eliminar_grupo">Error al eliminar el grupo</string>

    <string name="err_cargar_tareas_por_grupo">Error al cargar las tareas por grupo</string>
    <string name="err_obtener_tarea">Error al obtener la tarea</string>
    <string name="err_crear_tarea">Error al crear la tarea</string>
    <string name="err_guardar_tarea">Error al guardar la tarea</string>
    <string name="err_actualizar_tarea">Error al actualizar la tarea</string>
    <string name="err_eliminar_tarea">Error al eliminar la tarea</string>

    <string name="err_crear_usuario">Error al crear usuario</string>
    <string name="err_login">Error en el login</string>
    <string name="err_actualizar_usuario">Error al actualizar usuario</string>
    <string name="err_obtener_datos_usuario">Error al obtener datos del usuario</string>

    <!-- MENU -->
    <string name="menu_grupos">Grupos</string>
    <string name="menu_grupo_detalles">Detalles grupo</string>
    <string name="menu_grupo_crear">Nuevo grupo</string>
    <string name="menu_tareas">Tareas</string>
    <string name="menu_tarea_detalles">Detalles tarea</string>
    <string name="menu_tarea_crear">Nueva tarea</string>
    <string name="menu_tarea_edit">Editar tarea</string>
    <string name="menu_perfil">Perfil</string>

    <!-- labels -->
    <string name="label_grupo">Grupo:</string>
    <string name="label_tareas">Tareas:</string>

    <!-- TABS -->
    <string name="tab_login">Iniciar sesión</string>
    <string name="tab_register">Registrarse</string>

    <!-- FORMS -->
    <string name="field_user">User</string>
    <string name="field_nombre_usuario">Nombre de usuario</string>
    <string name="field_email">Email</string>
    <string name="field_passwd">Contraseña</string>
    <string name="field_confirm_passwd">Confirmar contraseña</string>
    <string name="field_cambiar_passwd">Cambiar contraseña</string>
    <string name="field_descripcion">Descripción</string>
    <string name="field_nombre">Nombre</string>
    <string name="field_titulo">Título</string>
    <string name="field_desc">Descripción</string>
    <string name="field_grupo_asociado">Grupo asociado</string>
    <string name="field_fecha_vencimiento">Fecha de vencimiento</string>

    <string name="btn_login">Iniciar sesión</string>
    <string name="btn_crear_cuenta">Crear cuenta</string>
    <string name="btn_crear_grupo">Crear grupo</string>
    <string name="btn_crear_tarea">Crear tarea</string>
    <string name="btn_guardar_cambios">Guardar cambios</string>
    <string name="btn_add_user">Añadir usuario</string>
    <string name="btn_si">Sí</string>
    <string name="btn_ok">OK</string>
    <string name="btn_cancelar">Cancelar</string>

    <string name="dialog_cerrar_sesion">Cerrar sesión</string>
    <string name="dialog_tarea_completada">Tarea completada</string>
    <string name="dialog_tarea_no_completada">Tarea no completada</string>
    <string name="dialog_eliminar_tarea">Eliminar tarea</string>
    <string name="dialog_eliminar_grupo">Eliminar grupo</string>
    <string name="dialog_actualizado_correctamente">Actualizado correctamente</string>
    <string name="dialog_pregunta_eliminar_esta_tarea">¿Seguro que quieres eliminar esta tarea?</string>
    <string name="dialog_pregunta_eliminar_este_grupo">¿Seguro que quieres eliminar este grupo? Se eliminarán todas las tareas que hay en él</string>
    <string name="dialog_pregunta_tarea_completada">¿Marcar tarea como completada?</string>
    <string name="dialog_pregunta_tarea_no_completada">¿Marcar tarea como NO completada?</string>

    <!-- DATOS -->
    <string name="data_sin_fecha_vencimiento">Sin fecha de vencimiento</string>
    <string name="data_sin_descripcion">Sin descripción</string>
    <string name="data_vence_el">Vence el</string>
    <string name="data_creado_el">Creado el</string>
    <string name="data_by">por</string>

    <!-- IMGS -->
    <string name="img_logo">Logo Onyx</string>

    <!-- MENSAJES -->
    <string name="msg_empty_grupos">Sin grupos</string>
    <string name="msg_necesitas_grupos">Necesitas crear al menos un grupo</string>
    <string name="msg_empty_tareas">Sin tareas</string>
    <string name="msg_tarea_marcada_completada">Tarea marcada como completada</string>
    <string name="msg_tarea_marcada_no_completada">Tarea marcada como NO completada</string>
</resources>