<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.tabs.RegisterFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- campo nombre -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputNombre"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_with_screen"
            android:layout_marginTop="@dimen/spacing_with_screen"
            android:layout_marginEnd="@dimen/spacing_with_screen"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputEditTextNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/field_user" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- campo correo -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputCorreo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_with_screen"
            android:layout_marginTop="@dimen/spacing_between_fields"
            android:layout_marginEnd="@dimen/spacing_with_screen"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inputNombre">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputEditTextCorreo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/field_email" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- campo password -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_with_screen"
            android:layout_marginTop="@dimen/spacing_between_fields"
            android:layout_marginEnd="@dimen/spacing_with_screen"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inputCorreo">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputEditTextPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/field_passwd"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- campo confirmar passwd -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputConfirmPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_with_screen"
            android:layout_marginTop="@dimen/spacing_between_fields"
            android:layout_marginEnd="@dimen/spacing_with_screen"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inputPassword">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputEditTextConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/field_confirm_passwd"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- botón registrar -->
        <Button
            android:id="@+id/btnRegister"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_with_screen"
            android:layout_marginTop="@dimen/spacing_between_field_button"
            android:layout_marginEnd="@dimen/spacing_with_screen"
            android:text="@string/btn_crear_cuenta"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inputConfirmPassword" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>